--- a/client/v4/package.json
+++ b/client/v4/package.json
@@ -2,7 +2,7 @@
   "name": "suny_np_childrens_center",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.php",
   "scripts": {
     "build": "tailwindcss -i ./css/input.css -o ./css/main.css",
     "watch": "tailwindcss -i ./css/input.css -o ./css/main.css --watch"
@@ -19,6 +19,6 @@
   },
   "homepage": "https://github.com/kelpoh/SUNY_NP_Childrens_Center#readme",
   "devDependencies": {
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.3.2"
   }
 }
